fix for banner overlapping with program name

--- a/templates/simple_sortable_table/banner_style.css
+++ b/templates/simple_sortable_table/banner_style.css
@@ -8,6 +8,11 @@
   padding: 2px 0 0 2px;
 }
 
+.wrapper a{
+	padding-right: 80px;
+}
+
+
 .ribbon-wrapper {
   width: 75px;
   height: 72px;
